...
        android:text="@string/str_give_hint"
        android:textColor="@color/monsoon"
        android:textSize="@dimen/_11sdp"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_marginBottom="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:gravity="center|start"
        android:hint="@string/str_friend_email"
...
