...
          style="@style/editText"
          />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="@dimen/_165sdp"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/btn_shadow_red_selected"
        android:fontFamily="@font/kreon_bold"
...
