...
  <string name="str_error_empty_password_message">Please enter valid password</string>

  <!-- Dummy User -->
  <string name="user_name">Hardik Dungrani</string>
  <string name="user_name_sort">Hardik</string>
  <string name="user_email">hardik.techark@gmail.com</string>
  <string name="user_address">Surat</string>
  <string name="user_city">Surat</string>
  <string name="user_zip">395004</string>
  <string name="user_birthday">1993/06/10</string>

  <string name="str_place_email">Email:</string>
  <string name="str_place_address">Address:</string>
...
